Iniciando disenio con Polymer

--- a/sgim/templates/cuentas/actualiza_perfil.html
+++ b/sgim/templates/cuentas/actualiza_perfil.html
@@ -11,11 +11,40 @@
 		{{form.errors}}	
 	{% endif %}
 	
-	<form method="post">
+	<form method="post" >
 		{% csrf_token %}
 		{{form.as_p}}
 		<button class="button small large-12" data-hint="Seguidos" type="submit">
 			<i class="fi-key"></i> Guardar Cambios
 		</button>
 	</form>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	// This works
+<core-animated-pages transitions="cross-fade">
+  <section>
+    <div cross-fade>sdfsdfsdff</div>
+  </section>
+  <section>
+    <div cross-fade>sdfsdfsfs</div>
+  </section>
+</core-animated-pages>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 {% endblock contenido %}
