--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -4,13 +4,113 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{% block titulo %}	{% endblock titulo %} </title>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<link rel="stylesheet" href="">
-</head>
-<body>
-	
-	{% block contenido %}
 
-	{% endblock contenido %}
+    <script src="/static/bower/bower_components/webcomponentsjs/webcomponents.js"></script>
+
+    <link rel="import" href="/static/bower/bower_components/font-roboto/roboto.html">
+    <link rel="import" href="/static/bower/bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="/static/bower/bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="/static/bower/bower_components/core-drawer-panel/core-drawer-panel.html">
+    <link rel="import" href="/static/bower/bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import" href="/static/bower/bower_components/core-icons/core-icons.html">
+    <link rel="import" href="/static/bower/bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="/static/bower/bower_components/core-animated-pages/core-animated-pages.html">
+    <link rel="import" href="/static/bower/bower_components/core-item/core-item.html">
+    <link rel="import" href="/static/bower/bower_components/core-menu/core-menu.html">
+    <link rel="import" href="/static/bower/bower_components/core-menu/core-submenu.html">
+    <link rel="import" href="/static/bower/bower_components/core-tooltip/core-tooltip.html">
+
+    <style rel="stylesheet">
+        core-toolbar{
+            background-color : #03A9F4;
+            color: white
+        }
+        body { font-family: sans-serif;}
+        [drawer] {background-color: #F9F9F9}
+    </style>
+
+    <style shim-shadowdom>
+        core-tooltip.fancy::shadow .core-tooltip {
+          opacity: 0;
+          -webkit-transition: all 400ms cubic-bezier(0,1.92,.99,1.07);
+          transition: all 400ms cubic-bezier(0,1.92,.99,1.07);
+          -webkit-transform: translate3d(0, -10px, 0);
+          transform: translate3d(0, -10px, 0);
+        }
+
+        core-tooltip.fancy:hover::shadow .core-tooltip,
+        core-tooltip.fancy:focus::shadow .core-tooltip {
+          opacity: 1;
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+        }
+  </style>
+
+</head>
+<body fullbleed layout vertical>
+
+   
+
+    <core-drawer-panel drawerWidth="240px">
+
+      <core-header-panel drawer mode="waterfall">
+        <core-toolbar>
+           <div class="core-header">
+                <core-tooltip label="Sistema de Gestion de Incidencias y Mantenimientos" 
+                    class="fancy" position="right">
+                SGIM
+                </core-tooltip>
+            </div>
+        </core-toolbar>
+        <div class="content"> 
+            <img src="http://www.realtimearts.net/data/images/art/46/4640_profile_nilssonpolias.jpg"
+                 width="70px"   class="bottom"/>
+            <div class="bottom" style="font-size:16px">Administrador</div>
+
+            <core-menu selected="0">
+                <core-submenu icon="settings" label="Preferencias">
+                    <core-item label="Mi Perfil"></core-item>
+                    <core-item label="Cambiar Contrasenia"></core-item>
+                </core-submenu>
+
+                <core-submenu icon="settings" label="Incidencias">
+
+                    <core-item label="Ultimas"></core-item>
+                    <core-item label="Abiertas"></core-item>
+                    <core-item label="Cerradas"></core-item>
+                </core-submenu>
+            </core-menu> 
+        </div>
+      </core-header-panel>
+
+      <core-header-panel flex mode="waterfall" main>
+        <core-toolbar >
+            <paper-icon-button icon="menu" core-drawer-toggle></paper-icon-button>           
+            <div class="core-header">Actualiza Tus Datos</div>
+            <span flex></span>
+            <paper-icon-button icon="search"></paper-icon-button>
+            <paper-icon-button icon="add"></paper-icon-button>
+
+        </core-toolbar>
+
+        <div class="content">        
+            {% block contenido %}
+
+            {% endblock contenido %}
+        </div>
+      </core-header-panel>
+
+
+    </core-drawer-panel>
+
+  
+
+
+
+
+
 
 </body>
 </html>
