--- a/sgim/templates/cuentas/cambiar_clave.html
+++ b/sgim/templates/cuentas/cambiar_clave.html
@@ -3,15 +3,84 @@
 {% block titulo %}
 	Cambio de Contraseña | Cuentas de Usuario
 {% endblock titulo %}
+{% block header %}
+	Cambiar Contraseña
+{% endblock header %}
 
 {% block contenido %}
 
-<form method="post">
-	{% csrf_token %}
-	{{form.as_p}}
-	<button class="button small large-12" data-hint="Seguidos" type="submit">
-			<i class="fi-key"></i> Guardar Cambios
-	</button>
-</form>
 
+<div vertical layout>
+
+		<h4 class="ui icon header">
+		  <i class="lock icon"></i>
+		  <div class="content">
+		    Cambio de Contraseña
+		     <div class="sub header">Debera volver a iniciar sesion luego de realizar el cambio</div>
+		  </div>
+		</h4>
+
+	<div style="width:350px;" self-center >
+				<paper-shadow class="card" z="2" animated>
+					<form class="custom loginfrm card" method="POST" >
+						{% csrf_token %}					
+						
+						<div class="column ">
+							<div class="ui form segment">
+								{% if form.old_password.errors %}
+									<div class="field error">	
+								{% else %}
+									<div class="field ">	
+								{% endif %}	
+									{% if form.old_password.errors %}									 
+										{{ form.old_password.errors.as_text }}									
+									{% endif %}					
+										<div class="ui left icon input ">
+											<input  type="password" placeholder="Contraseña actual" name="old_password" required>		
+											<i class="lock icon"></i>
+											<div class="ui corner yellow label">
+										    	<i class="asterisk icon"></i>
+										  	</div>
+										</div>
+									</div>
+
+									<div class="field ">													
+										<div class="ui left icon input ">
+											<input type="password" name="new_password1" required placeholder="Nueva contraseña">
+											<i class="lock icon"></i>
+											<div class="ui corner yellow label">
+										    	<i class="asterisk icon"></i>
+										  	</div>
+										</div>
+									</div>
+
+								{% if form.new_password2.errors %}
+									<div class="field error">	
+								{% else %}
+									<div class="field ">	
+								{% endif %}	
+									{% if form.new_password2.errors %}
+										<i class="warning icon"></i>{{ form.new_password2.errors.as_text }}
+									{% endif %}										
+										<div class="ui left icon input ">
+											<input type="password" name="new_password2" required placeholder="Confirma tu nueva contraseña">
+											<i class="lock icon"></i>
+											<div class="ui corner yellow label">
+										    	<i class="asterisk icon"></i>
+										  	</div>
+										</div>
+									</div>
+								
+								<button class="ui blue right labeled icon button ripple" type="submit">
+										Guardar Cambios  <i class="save icon"></i>
+													<paper-ripple fit></paper-ripple>
+								</button>
+								
+							</div>
+						</div>
+					
+					</form>
+				</paper-shadow>
+				</div>
+</div>
 {% endblock contenido %}
