--- a/sgim/templates/cuentas/login.html
+++ b/sgim/templates/cuentas/login.html
@@ -1,47 +1,68 @@
+	{% extends "base.html" %}
+	{% load i18n %}
+	{% block titulo %}
+		Inicio de Sesion
+	{% endblock titulo %}
+	{% block header %}
+		Login
+	{% endblock header %}
+	{% block contenido %}
+		<div vertical layout >
+			<div class="ui horizontal divider">
+				Bienvenido
+			</div>
 
-{% extends "base.html" %}
-{% load i18n %}
-
-
-{% block titulo %}
-	Inicio de Sesion
-{% endblock titulo %}
-
-{% block contenido %}
-
-		<h4>Empezemos...</h4>
-
-	<form class="custom loginfrm" method="POST">
-				 {% csrf_token %}
-				 {% if form.non_field_errors %}
-                     {% for error in  form.non_field_errors %}
-                        <!-- {{error}} -->{% trans error %}
-                     {% endfor %}
-				 {% endif %}
-
-				<div class="panel radius">
-					<h5 class="loginTitle">Inicia Sesion <i class="fi-shield"></i> </h5>
-				     <div class="row collapse">
-					    <div class="small-3 large-2 columns">
-					      <span class="prefix"><i class="fi-torsos-male-female"></i>  </span>
-					    </div>
-					    <div class="small-9 large-10 columns">
-					      <input type="text" name="username" placeholder="Usuario" required>
-					    </div>
-					</div>
-					<div class="row collapse">
-					    <div class="small-3 large-2 columns">
-					      <span class="prefix"><i class="fi-lock"></i>  </span>
-					    </div>
-					    <div class="small-9 large-10 columns">
-					      <input type="password" name="password" placeholder="Clave" required>
-					    </div>
-					</div>
-					<button class="button small large-12" data-hint="Seguidos" type="submit">
-						  <i class="fi-key"></i> Indentificame
-					</button>
-				</div>
-	</form>
-
-
-{% endblock contenido %}
+			<div style="width:350px" self-center >
+						{% if form.non_field_errors %}
+							<div class="ui error message">
+								<div class="header"><i class="icon warning circle"></i> Tenemos un pequeño problema</div>
+								<p>
+									{% for error in  form.non_field_errors %}
+										<!-- {{error}} -->{% trans error %}
+									{% endfor %}
+								</p>
+							</div>					
+						{% endif %}
+				<paper-shadow class="card" z="2" animated>
+					<form class="custom loginfrm card" method="POST" >
+						{% csrf_token %}					
+						
+						<div class="column ">
+							<div class="ui form segment">
+								<div class="field">									
+									<a class="ui teal right ribbon label"><i class="lock icon"></i>  Inicio de Sesion</a>	
+									<label>Nombre de Usuario</label>
+									<div class="ui left icon input ">
+										<input type="text" placeholder="Ingresa tu nombre de usuario" name="username" required>		
+										<i class="user icon"></i>
+										<div class="ui corner yellow label">
+									    	<i class="asterisk icon"></i>
+									  	</div>
+									</div>
+								</div>
+								<div class="field ">
+									<label>Contraseña</label>
+									<div class="ui left icon input ">
+										<input type="password" name="password" required placeholder="Ingresa tu contraseña">
+										<i class="lock icon"></i>
+										<div class="ui corner yellow label">
+									    	<i class="asterisk icon"></i>
+									  	</div>
+									</div>
+								</div>
+								
+									<button class="ui blue right labeled icon button ripple" type="submit">
+										Autenticarme  <i class="unlock icon"></i>
+													<paper-ripple fit></paper-ripple>
+									</button>
+								
+							</div>
+						</div>
+					
+					</form>
+				</paper-shadow>
+			</div>
+		</div>
+	{% endblock contenido %}
+	{% block scripts %}
+	{% endblock scripts %}
