--- a/sgim/templates/cuentas/perfil.html
+++ b/sgim/templates/cuentas/perfil.html
@@ -4,20 +4,55 @@
 	Usuario {{perfil.username}} | Cuentas de Usuario
 {% endblock titulo %}
 
+{% block header %}
+	{{perfil.username}}
+{% endblock header %}
+
 {% block contenido %}
 
-	<h4>Perfil del Usuario {{perfil.username}} </h4>
-	{% if user.username == perfil.username %}
-		Para actualizar la contraseña presione <a href="/cuentas/cambiar-clave">Aqui</a>
-	{% endif %}
-	<br><br>
-	{{perfil.telefono}} <br>
-	{{perfil.firstname}} <br>
-	{{perfil.email}} <br>
-	{{perfil.last_login}} <br>
+	<div vertical layout>
 
-	{% if not perfil.is_active %}
-		<span style="color:red"><h5>Cuenta de usuario Inactiva</h5></span>
-	{% endif %}
+		<h4 class="ui icon header">
+		  <i class="user icon"></i>
+		  <div class="content">
+		    Perfil de Usuario
+		     <div class="sub header">
+		     	{% if user.username == perfil.username %}
+					Cambiar mi  
+					<a href="{% url 'actualizar_clave' %}">contraseña</a>
+				{% endif %}</div>
+		  </div>
+		</h4>
 
+	<div class=" ui card" self-center >
+	    <div class="image">
+	      <img src="{{MEDIA_URL}}{{perfil.imagen}}" class="ui small image">
+	      <a class="ui teal right ribbon label">{{perfil.username}}</a>
+	    </div>
+	    <div class="content">
+	      <div class="header">{{perfil.firstname}} {{perfil.lastname}}</div>
+	      <div class="meta">
+	        <a></a>
+	      </div>
+	      <div class="description" layout vertical>
+	       <span><i class="call icon"></i>: {{perfil.telefono}}</span>
+	       <span><i class=" mail icon"></i>: {{perfil.email }}</span>
+	       
+	      </div>
+	    </div>
+	   {% if user.username == perfil.username %}
+	   <div class="extra content">	   	
+		    <span class="left floated like">			    
+			      <i class="edit icon"></i>
+			    <a href="{% url 'modificar_perfil' %}" >
+			      Editar
+			    </a>
+		    </span>	   	    
+	  </div>
+	  {% endif %}
+
+	    
+  </div>
+
+</div>
 {% endblock contenido %}
