--- a/sgim/templates/home.html
+++ b/sgim/templates/home.html
@@ -7,6 +7,11 @@
 	Inicio
 {% endblock header %}
 
+{% block include_statics %}
+    <script src="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.js"></script>
+    <link rel="stylesheet" href="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.css">
+{% endblock include_statics %}
+
 {% block contenido %}
 
 
